Добавлен выбор задания из списка

--- a/templates/profile.html
+++ b/templates/profile.html
@@ -5,6 +5,6 @@
   <img src="static/img/avatars/{{ current_user.id }}.jpg" width="128" height="128">
 </p>
 <p>Никнейм: {{ current_user.nickname }}</p>
-<p>Решено задач: {{ current_user.task_completed }}</p>
+<p>Решено заданий: {{ current_user.task_completed }}</p>
 <p>Почта: {{ current_user.email }}</p>
 {% endblock %}
