Почти доделана возможность решать задания

--- a/templates/base.html
+++ b/templates/base.html
@@ -3,12 +3,12 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  {% if not current_user.is_authenticated %}
   <link rel="stylesheet"
         href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
         integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
         crossorigin="anonymous">
-  <link rel="stylesheet" href="./static/css/drop-down_list.css">
-  <script language="JavaScript" src="./static/javascript/drop-down_list.js"></script>
+  {% endif %}
   {% block css %}{% endblock %}
   <title>{{title}}</title>
 </head>
@@ -31,5 +31,6 @@
 <main role="main" class="container">
   {% block content %}{% endblock %}
 </main>
+  {% block script %}{% endblock %}
 </body>
 </html>
