--- a/templates/profile.html
+++ b/templates/profile.html
@@ -1,10 +1,18 @@
 {% extends "base.html" %}
 
+{% block css %}
+<link rel="stylesheet" href="./static/css/drop-down_list.css" type="text/css">
+{% endblock %}
+
+{% block script %}
+<script language="JavaScript" src="./static/javascript/drop-down_list.js"></script>
+{% endblock %}
+
 {% block content %}
 <p>
   <img src="static/img/avatars/{{ current_user.id }}.jpg" width="128" height="128">
 </p>
 <p>Никнейм: {{ current_user.nickname }}</p>
-<p>Решено задач: {{ current_user.task_completed }}</p>
+<p>Решено заданий: {{ current_user.task_completed }}</p>
 <p>Почта: {{ current_user.email }}</p>
 {% endblock %}
