Остался дизайн, апи и ещё какие-нибудь дополнительные штуки

--- a/templates/main.html
+++ b/templates/main.html
@@ -1,13 +1,13 @@
 {% extends "base.html" %}
 
 {% block css %}
-<link rel="stylesheet" href="./static/css/custom_selection_field.css">
-<link rel="stylesheet" href="./static/css/drop-down_list.css" type="text/css">
+<link rel="stylesheet" href="../static/css/custom_selection_field.css">
+<link rel="stylesheet" href="../static/css/drop-down_list.css" type="text/css">
 {% endblock %}
 
 {% block script %}
-<script language="JavaScript" src="./static/javascript/custom_selection_field.js"></script>
-<script language="JavaScript" src="./static/javascript/drop-down_list.js"></script>
+<script language="JavaScript" src="../static/javascript/custom_selection_field.js"></script>
+<script language="JavaScript" src="../static/javascript/drop-down_list.js"></script>
 {% endblock %}
 
 {% block content %}
