Изменена пара функций, дописано api с пользователями, сделан дизайн сайта

--- a/templates/congratulations.html
+++ b/templates/congratulations.html
@@ -1,11 +1,15 @@
 {% extends "base.html" %}
 
 {% block css %}
-<link rel="stylesheet" href="../static/css/drop-down_list.css" type="text/css">
+<style>html {background-image: url(../static/img/background.jpg);}</style>
+<link rel="stylesheet" href="../static/css/side_panel.css" type="text/css">
+<link rel="stylesheet" href="../static/css/background.css">
+<link rel="stylesheet" href="../static/css/text.css">
+<link rel="stylesheet" href="../static/css/gradient-button.css">
 {% endblock %}
 
 {% block script %}
-<script language="JavaScript" src="../static/javascript/drop-down_list.js"></script>
+<script language="JavaScript" src="../static/javascript/side_panel.js"></script>
 {% endblock %}
 
 {% block content %}
