--- a/templates/base.html
+++ b/templates/base.html
@@ -1,36 +1,37 @@
 <!doctype html>
 <html lang="en">
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  {% if not current_user.is_authenticated %}
-  <link rel="stylesheet"
-        href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
-        integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
-        crossorigin="anonymous">
-  {% endif %}
-  {% block css %}{% endblock %}
-  <title>{{title}}</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    {% if False and not current_user.is_authenticated %}
+    <link rel="stylesheet"
+          href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+          integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
+          crossorigin="anonymous">
+    {% endif %}
+    {% block css %}{% endblock %}
+    <title>{{title}}</title>
 </head>
 <body>
 <header>
-  <nav class="navbar navbar-light bg-light">
-    {% if current_user.is_authenticated %}
-    <div class="dropdown">
-    <button onclick="myFunction()" class="dropbtn">{{ current_user.nickname }}</button>
-    <div id="myDropdown" class="dropdown-content">
-      <a href="/">Главное меню</a>
-      <a href="/profile">Профиль</a>
-      <a href="/logout">Выйти</a>
-    </div>
-</div>
-    {% endif %}
-  </nav>
+    <nav class="navbar navbar-light bg-light">
+        {% if current_user.is_authenticated %}
+        <div id="mySidenav" class="sidenav">
+            <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+            <a href="/">Главное меню</a>
+            <a href="/profile">Профиль</a>
+            <a href="/logout">Выйти</a>
+        </div>
+        <button class="gradient-button" onclick="openNav()">{{ current_user.nickname }}</button>
+        {% endif %}
+    </nav>
 </header>
 <!-- Begin page content -->
-<main role="main" class="container">
-  {% block content %}{% endblock %}
-</main>
-  {% block script %}{% endblock %}
+<div id="main">
+    <main role="main" class="container">
+        {% block content %}{% endblock %}
+    </main>
+    {% block script %}{% endblock %}
+</div>
 </body>
 </html>
