--- a/templates/main.html
+++ b/templates/main.html
@@ -1,25 +1,29 @@
 {% extends "base.html" %}
 
 {% block css %}
+<style>html {background-image: url(../static/img/background.jpg);}</style>
 <link rel="stylesheet" href="../static/css/custom_selection_field.css">
-<link rel="stylesheet" href="../static/css/drop-down_list.css" type="text/css">
+<link rel="stylesheet" href="../static/css/side_panel.css" type="text/css">
+<link rel="stylesheet" href="../static/css/background.css">
+<link rel="stylesheet" href="../static/css/text.css">
+<link rel="stylesheet" href="../static/css/gradient-button.css">
 {% endblock %}
 
 {% block script %}
 <script language="JavaScript" src="../static/javascript/custom_selection_field.js"></script>
-<script language="JavaScript" src="../static/javascript/drop-down_list.js"></script>
+<script language="JavaScript" src="../static/javascript/side_panel.js"></script>
 {% endblock %}
 
 {% block content %}
 <h1 align="center">Подготовка к ЕГЭ по русскому языку</h1>
 <p align="center">
     {% if not current_user.is_authenticated %}
-        <a class="btn btn-primary" href="/register">Зарегистрироваться</a>
-        <a class="btn btn-success" href="/login">Войти</a>
+    <a class="gradient-button" href="/register">Зарегистрироваться</a>
+    <a class="gradient-button" href="/login">Войти</a>
     {% else %}
-    <form method="post">
-        <div class="custom-select" style="width:400px;position:center;">
-          <select name="task" id="task">
+<form method="post">
+    <div class="custom-select" style="width:400px;position:center;margin:auto;">
+        <select name="task" id="task">
             <option value="0">Выберите задание:</option>
             <option value="9">9</option>
             <option value="10">10</option>
@@ -27,11 +31,13 @@
             <option value="13">13</option>
             <option value="15">15</option>
             <option value="16">16</option>
-          </select>
-        </div>
-        <button type="submit" class="btn btn-primary">Найти</button>
-    </form>
-    {% endif %}
-    {{ message }}
+        </select>
+    </div>
+    <div align="center">
+        <button type="submit" class="gradient-button">Найти</button>
+    </div>
+</form>
+{% endif %}
+<p> {{ message }} </p>
 </p>
 {% endblock %}
