--- a/templates/register.html
+++ b/templates/register.html
@@ -1,55 +1,69 @@
 {% extends "base.html" %}
 
+{% block css %}
+<style>html {background-image: url(../static/img/background.jpg);}</style>
+<link rel="stylesheet" href="../static/css/background.css">
+<link rel="stylesheet" href="../static/css/text.css">
+<link rel="stylesheet" href="../static/css/gradient-button.css">
+<link rel="stylesheet" href="../static/css/input.css">
+{% endblock %}
+
 {% block content %}
 <h1>Register</h1>
-<form action="" method="post" enctype="multipart/form-data" novalidate>
-    {{ form.hidden_tag() }}
-    <p>
-        {{ form.nickname.label }}<br>
-        {{ form.nickname(class="form-control") }}<br>
+<div class="box">
+    <form action="" method="post" enctype="multipart/form-data" novalidate>
+        {{ form.hidden_tag() }}
+        <p>
+        <div class="input-container" align="center">{{ form.nickname(type="text", class="form-control") }}
+            <label>{{ form.nickname.label }}</label>
+        </div>
         {% for error in form.nickname.errors %}
-    <p class="alert alert-danger" role="alert">
-        {{ error }}
-    </p>
-    {% endfor %}
-    </p>
-    <p>
-        {{ form.password.label }}<br>
-        {{ form.password(class="form-control", type="password") }}<br>
+        <p class="alert alert-danger" role="alert">
+            {{ error }}
+        </p>
+        {% endfor %}
+        </p>
+        <p>
+        <div class="input-container" align="center">{{ form.password(type="password", class="form-control") }}
+            <label>{{ form.password.label }}</label>
+        </div>
         {% for error in form.password.errors %}
-    <p class="alert alert-danger" role="alert">
-        {{ error }}
-    </p>
-    {% endfor %}
-    </p>
-    <p>
-        {{ form.password_again.label }}<br>
-        {{ form.password_again(class="form-control", type="password") }}<br>
+        <p class="alert alert-danger" role="alert">
+            {{ error }}
+        </p>
+        {% endfor %}
+        </p>
+        <p>
+        <div class="input-container" align="center">{{ form.password_again(type="password", class="form-control") }}
+            <label>{{ form.password_again.label }}</label>
+        </div>
         {% for error in form.password_again.errors %}
-    <p class="alert alert-danger" role="alert">
-        {{ error }}
-    </p>
-    {% endfor %}
-    </p>
-    <p>
-        {{ form.email.label }}<br>
-        {{ form.email(class="form-control", type="email") }}<br>
+        <p class="alert alert-danger" role="alert">
+            {{ error }}
+        </p>
+        {% endfor %}
+        </p>
+        <p>
+        <div class="input-container" align="center">{{ form.email(type="email", class="form-control") }}
+            <label>{{ form.email.label }}</label>
+        </div>
         {% for error in form.email.errors %}
-    <p class="alert alert-danger" role="alert">
-        {{ error }}
-    </p>
-    {% endfor %}
-    </p>
-    <p>
-        {{ form.picture.label }}<br>
-        {{ form.picture(class="form-control") }}<br>
-        {% for error in form.picture.errors %}
-    <p class="alert alert-danger" role="alert">
-        {{ error }}
-    </p>
-    {% endfor %}
-    </p>
-    <p>{{ form.submit(type="submit", class="btn btn-primary") }}</p>
-    {{message}}
-</form>
+        <p class="alert alert-danger" role="alert">
+            {{ error }}
+        </p>
+        {% endfor %}
+        </p>
+        <p>
+            {{ form.picture.label }}<br>
+            {{ form.picture(class="form-control gradient-button") }}<br>
+            {% for error in form.picture.errors %}
+        <p class="alert alert-danger" role="alert">
+            {{ error }}
+        </p>
+        {% endfor %}
+        </p>
+        <p>{{ form.submit(type="submit", class="gradient-button") }}</p>
+        {{message}}
+    </form>
+</div>
 {% endblock %}
