--- a/static/css/custom_selection_field.css
+++ b/static/css/custom_selection_field.css
@@ -8,7 +8,7 @@
 }
 
 .select-selected {
-  background-color: DodgerBlue;
+  background-color: #476DD5;
 }
 
 .select-selected:after {
@@ -38,7 +38,7 @@
 
 .select-items {
   position: absolute;
-  background-color: DodgerBlue;
+  background-color: #476DD5;
   top: 100%;
   left: 0;
   right: 0;
