--- a/templates/main.html
+++ b/templates/main.html
@@ -20,17 +20,25 @@
     {% if not current_user.is_authenticated %}
     <a class="gradient-button" href="/register">Зарегистрироваться</a>
     <a class="gradient-button" href="/login">Войти</a>
+    <br>
+    <a class="gradient-button" href="/example_task">Пример задания</a>
     {% else %}
 <form method="post">
     <div class="custom-select" style="width:400px;position:center;margin:auto;">
         <select name="task" id="task">
             <option value="0">Выберите задание:</option>
+            <option value="4">4</option>
+            <option value="5">5</option>
+            <option value="6">6</option>
             <option value="9">9</option>
             <option value="10">10</option>
+            <option value="11">11</option>
             <option value="12">12</option>
             <option value="13">13</option>
+            <option value="14">14</option>
             <option value="15">15</option>
             <option value="16">16</option>
+            <option value="17">17</option>
         </select>
     </div>
     <div align="center">
