--- a/templates/base.html
+++ b/templates/base.html
@@ -19,6 +19,9 @@
         <div id="mySidenav" class="sidenav">
             <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
             <a href="/">Главное меню</a>
+            {% if current_user.id == 1 %}
+            <a href="/add_task">Добавить задание</a>
+            {% endif %}
             <a href="/profile">Профиль</a>
             <a href="/logout">Выйти</a>
         </div>
