--- a/templates/change_password.html
+++ b/templates/change_password.html
@@ -6,28 +6,33 @@
 <link rel="stylesheet" href="../static/css/text.css">
 <link rel="stylesheet" href="../static/css/gradient-button.css">
 <link rel="stylesheet" href="../static/css/input.css">
+<link rel="stylesheet" href="../static/css/side_panel.css">
+{% endblock %}
+
+{% block script %}
+<script language="JavaScript" src="./static/javascript/side_panel.js"></script>
 {% endblock %}
 
 {% block content %}
-<h1>Вход</h1>
+<h1>{{ title }}</h1>
 <div class="box">
     <form action="" method="post" enctype="multipart/form-data" novalidate>
         {{ form.hidden_tag() }}
         <p>
-        <div class="input-container" align="center">{{ form.email(type="text", class="form-control") }}
-            <label>{{ form.email.label }}</label>
+        <div class="input-container" align="center">{{ form.password(type="password", class="form-control") }}
+            <label>{{ form.password.label }}</label>
         </div>
-        {% for error in form.email.errors %}
+        {% for error in form.password.errors %}
         <p class="alert alert-danger" role="alert">
             {{ error }}
         </p>
         {% endfor %}
         </p>
         <p>
-        <div class="input-container" align="center">{{ form.password(class="form-control", type="password") }}
-            <label>{{ form.password.label }}</label>
+        <div class="input-container" align="center">{{ form.password_again(type="password", class="form-control") }}
+            <label>{{ form.password_again.label }}</label>
         </div>
-        {% for error in form.password.errors %}
+        {% for error in form.password_again.errors %}
         <p class="alert alert-danger" role="alert">
             {{ error }}
         </p>
