--- a/templates/redact.html
+++ b/templates/redact.html
@@ -6,15 +6,30 @@
 <link rel="stylesheet" href="../static/css/text.css">
 <link rel="stylesheet" href="../static/css/gradient-button.css">
 <link rel="stylesheet" href="../static/css/input.css">
+<link rel="stylesheet" href="../static/css/side_panel.css">
+{% endblock %}
+
+{% block script %}
+<script language="JavaScript" src="./static/javascript/side_panel.js"></script>
 {% endblock %}
 
 {% block content %}
-<h1>Вход</h1>
+<h1>{{ title }}</h1>
 <div class="box">
     <form action="" method="post" enctype="multipart/form-data" novalidate>
         {{ form.hidden_tag() }}
         <p>
-        <div class="input-container" align="center">{{ form.email(type="text", class="form-control") }}
+        <div class="input-container" align="center">{{ form.nickname(type="text", class="form-control") }}
+            <label>{{ form.nickname.label }}</label>
+        </div>
+        {% for error in form.nickname.errors %}
+        <p class="alert alert-danger" role="alert">
+            {{ error }}
+        </p>
+        {% endfor %}
+        </p>
+        <p>
+        <div class="input-container" align="center">{{ form.email(type="email", class="form-control") }}
             <label>{{ form.email.label }}</label>
         </div>
         {% for error in form.email.errors %}
@@ -24,17 +39,16 @@
         {% endfor %}
         </p>
         <p>
-        <div class="input-container" align="center">{{ form.password(class="form-control", type="password") }}
-            <label>{{ form.password.label }}</label>
-        </div>
-        {% for error in form.password.errors %}
+            {{ form.picture.label }}<br>
+            {{ form.picture(class="form-control gradient-button") }}<br>
+            {% for error in form.picture.errors %}
         <p class="alert alert-danger" role="alert">
             {{ error }}
         </p>
         {% endfor %}
         </p>
         <p>{{ form.submit(type="submit", class="gradient-button") }}</p>
-        <p>{{message}}</p>
+        {{message}}
     </form>
 </div>
 {% endblock %}
