--- a/templates/main.html
+++ b/templates/main.html
@@ -30,6 +30,7 @@
             <option value="4">4</option>
             <option value="5">5</option>
             <option value="6">6</option>
+            <option value="7">7</option>
             <option value="9">9</option>
             <option value="10">10</option>
             <option value="11">11</option>
@@ -39,6 +40,8 @@
             <option value="15">15</option>
             <option value="16">16</option>
             <option value="17">17</option>
+            <option value="18">18</option>
+            <option value="21">21</option>
         </select>
     </div>
     <div align="center">
